another phone test

--- a/css/lab4AcessibleCSS.css
+++ b/css/lab4AcessibleCSS.css
@@ -207,6 +207,8 @@ nav ul li a:active{
                 "aside3"
                 "aside4"
                 "footer1"
+                "aside1"
+                "aside2"
         }
 
         nav ul {
