--- a/css/index.css
+++ b/css/index.css
@@ -1,71 +1,211 @@
 /* import for EB Garamond and M PLUS Rounded*/
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-body {
-    background-image: url();
-    background-color: #222645;
-  }
+/* color bin
 
-h1 {
-    /*color:#fac632; color for when website is fully formatted*/
-    color: #fac632;
-    font-family: "EB Garamond";
-    font-style: normal;
-    font-weight: 800;
-    font-size: 50pt;
-    margin: 20px 20px 20px 30px;
+  #222645 dark blue
+
+  #fac632 yellow
+  
+*/  
+
+.sr-only {
+  border: 0; 
+  clip: rect(0,0,0,0);
+  height: 1px; 
+  margin: -1px; 
+  overflow: hidden; 
+  padding: 0; 
+  position: absolute; 
+  white-space: nowrap;
+  width: 1px;
 }
 
+.skip-link {
+  background:black; 
+  color: #ffff;
+  font-weight: 700; 
+  padding: 4px; 
+  position: absolute; 
+  transform: translateY(-200%);
+}
+
+.skip-link:focus {
+  transform: translateY(-100%);
+}
+
+.skip-link {
+  transition: transform -0.3s; 
+}
+
+*,
+*:before, 
+*:after {
+  box-sizing: border-box;
+  padding: 0; 
+  margin: 0;
+}
+
+.container {
+  max-width: 1100px; 
+  margin: 0 auto; 
+}
+
+body {
+    background: #222645;
+    font-family: "Poppins", sans-serif; 
+    font-size: 1.5em; 
+}
+
+img {
+  padding: .3em; 
+  margin: 3%;
+  display: block;
+  float: left;
+}
+
+
+h1, 
+h2, 
 h3 {
-    color: #FFFFFF;
-    font-family: "EB Garamond";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 35pt;
-    margin: 20px 20px 0px 30px;
-  }
-
-  p {
-    color: white;
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 150%;
-    padding: 1%;
-    margin: 1%;
-  }
-
-  /* css for links */
-a:link {
+    font-family: 'Eb Garamond', serif;
+    font-weight: 700; 
+    font-size: .2em 0;
+    padding: .5em 0em .5em 0em;
     color: #fac632;
-  }
-  
-  a:visited {
-    color: white;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-    color: #fac632;
-  }
-  
-  a {
-    all: unset;
-  }
+}
 
-  .flex-container {
-    display: flex;
-    flex-direction: row;
-    width: 600px;
-    font-size: 20pt;
-    text-align: left;
-    margin: 20px 20px 20px 30px;
-  }
 
-  .nav-menu-item{
-    margin: 0px 20px 20px 0px;
-    font-family: "EB Garamond";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15pt;
-  }
+p {
+  margin: 1.8em 0;
+}
+
+h2 {
+  font-size: 2.5em;
+  padding: 0em 0em 0em 1.1em; 
+}
+
+header, 
+nav, 
+main, 
+aside,
+footer {
+    padding: 1.5em;
+}
+
+header, footer {
+  text-align: center; 
+}
+
+.container{
+  max-width: 1200 px; 
+  margin: 0 auto; 
+  background: #222645;
+  display: grid; 
+  width: 100 vw; 
+  height: 100 vh; 
+  grid-template-columns: 
+   1fr    2fr     1fr; 
+  grid-template-areas: 
+  "header1    header1 header1"
+  "nav1   nav1    nav1"
+  "main1 main1   main1"
+  "main1 main1   main1"
+  "footer1    footer1 footer1"
+}
+
+header {
+  grid-area: header1;
+  color: #fac632;
+  font-size: 1.5em;
+}
+
+nav {
+  grid-area: nav1;
+}
+
+main {
+  grid-area: main1;
+  max-height: 100%;
+  color: white; 
+}
+
+footer {
+  grid-area: footer1;
+  color: white;
+}
+
+nav ul {
+  display: flex; 
+  flex-flow: row nowrap; 
+  justify-content: space-around;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  text-decoration: none; 
+  font-size: 1.3em; 
+}
+
+nav ul li a:link {
+  color: #fac632; 
+}
+
+nav ul li a:visited {
+  color: #fac632; 
+}
+
+nav ul li a:hover {
+  color: #222645; 
+  background: white;
+  padding: .2em .5em .2em .5em;
+  border-radius: 4px; 
+}
+
+nav ul li a:active{
+  color: magenta;
+}
+
+@media screen 
+    and (min-width: 641px)
+    and(maxwidth: 640px) {
+        .container {
+            grid-template-columns: 
+             1fr    1fr;
+        
+            grid-template-areas: 
+            "header1 header1"
+            "nav1 nav1"
+            "main1 main1"
+            "footer1 footer1"
+        }
+    }
+
+@media screen
+    and (max-width: 640px) {
+        .container {
+            grid-template-columns: 
+            1fr;
+
+            grid-template-areas:
+                "header1"
+                "nav1"
+                "main1"
+                "footer1"
+        }
+
+        nav ul {
+            flex-flow: column nowrap; 
+            text-align: center; 
+        }
+
+        nav ul li a {
+            display: block; 
+            padding: 10px 5px; 
+            margin: 5px; 
+            background: #222645;
+        }
+    }
