update nav system for class portal
push to test this on mobile and see what i need to change

--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,113 @@ body {
     font-size: 1.5em; 
 }
 
+.disclosure-nav {
+  background-color: #222645;
+  display: flex;
+  list-style-type: none;
+  padding: 10px 40px 10px 40px;
+  margin: 0;
+  font-family: "Poppins", sans-serif; 
+  color: white; 
+  font-size: 1em;
+  text-decoration: none;
+}
+
+.disclosure-nav ul {
+  background-color: #222645;
+  border: 1px solid tra;
+  border-top-width: 5px;
+  border-radius: 0 0 4px 4px;
+  display: block;
+  list-style-type: none;
+  margin: 0;
+  min-width: 200px;
+  padding: 0;
+  position: absolute;
+  top: 100%;
+}
+
+.disclosure-nav li {
+  margin: 0;
+}
+
+.disclosure-nav > li {
+  display: flex;
+  position: relative;
+}
+
+.disclosure-nav ul a {
+  border: 0;
+  color: white;
+  display: block;
+  margin: 0;
+  padding: 0.5em 1em;
+  text-decoration: underline;
+}
+
+.disclosure-nav ul a:hover,
+.disclosure-nav ul a:focus {
+  background-color: white;
+  color:#222645;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+
+.disclosure-nav ul a:focus {
+  outline: 5px solid #222645;
+  position: relative;
+}
+
+.disclosure-nav button,
+.disclosure-nav .main-link {
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-right-color: #222645;
+  display: flex;
+  padding: 10px 40px 10px 40px;
+  font-family: "Poppins", sans-serif; 
+  color: white; 
+  font-size: 1em;
+}
+
+.disclosure-nav .main-link {
+  border-right-color: transparent;
+}
+
+.disclosure-nav button::after {
+  content: "";
+  border-bottom: 1px solid #222645;
+  border-right: 1px solid #222645;
+  height: 0.5em;
+  margin-left: 0.75em;
+  width: 0.5em;
+  transform: rotate(45deg);
+}
+
+.disclosure-nav .main-link + button::after {
+  margin-left: 0;
+}
+
+.disclosure-nav button:focus,
+.disclosure-nav .main-link:focus {
+  border-color: #222645;
+  outline: 5px solid rgba(238, 238, 255, 0.75);
+  position: relative;
+}
+
+.disclosure-nav button:hover,
+.disclosure-nav button[aria-expanded="true"] {
+  background-color: white;
+  color: #222645;
+}
+
+.disclosure-nav button:hover::after,
+.disclosure-nav button[aria-expanded="true"]::after {
+  border-color: white;
+}
+
+
 img {
   padding: .3em; 
   margin: 3%;
@@ -86,7 +193,6 @@ h2 {
 }
 
 header, 
-nav, 
 main, 
 aside,
 footer {
@@ -122,6 +228,7 @@ header {
 
 nav {
   grid-area: nav1;
+  color: white; 
 }
 
 main {
@@ -135,39 +242,15 @@ footer {
   color: white;
 }
 
-nav ul {
-  display: flex; 
-  flex-flow: row nowrap; 
-  justify-content: space-around;
+a {
+  color:white; 
+  font-family: "Poppins", sans-serif; 
+  color: white; 
+  font-size: 1em;
+  text-decoration: none;
+  padding: 10px 20px 0 20px;
 }
 
-nav ul li {
-  list-style: none;
-}
-
-nav ul li a {
-  text-decoration: none; 
-  font-size: 1.3em; 
-}
-
-nav ul li a:link {
-  color: #fac632; 
-}
-
-nav ul li a:visited {
-  color: #fac632; 
-}
-
-nav ul li a:hover {
-  color: #222645; 
-  background: white;
-  padding: .2em .5em .2em .5em;
-  border-radius: 4px; 
-}
-
-nav ul li a:active{
-  color: magenta;
-}
 
 @media screen 
     and (min-width: 641px)
@@ -183,6 +266,8 @@ nav ul li a:active{
             "footer1 footer1"
         }
     }
+
+
 
 @media screen
     and (max-width: 640px) {
