--- a/css/index.css
+++ b/css/index.css
@@ -200,6 +200,11 @@ h2 {
   padding: 0em 0em 0em 1.1em; 
 }
 
+.normalHeader {
+  padding: 0; 
+  font-size: 2em;
+}
+
 header, 
 main, 
 aside,
@@ -259,6 +264,14 @@ a {
   padding: 10px 20px 0 20px;
 }
 
+.normalLink {
+  color: white; 
+  font-family: "Poppins", sans-serif; 
+  color: #fac632;
+  text-decoration: underline; 
+  padding: 0; 
+}
+
 
 @media screen 
     and (min-width: 641px)
@@ -288,5 +301,9 @@ a {
                 "nav1"
                 "main1"
                 "footer1"
+        }
+
+        .disclosure-nav {
+          max-width: 100px; 
         }
     }
