--- a/css/index.css
+++ b/css/index.css
@@ -297,6 +297,11 @@ a {
 
 @media screen
     and (max-width: 640px) {
+
+        body {
+          max-width: 100%; 
+        }
+
         .container {
             grid-template-columns: 
             1fr;
