--- a/css/index.css
+++ b/css/index.css
@@ -315,6 +315,10 @@ a {
           padding: 0; 
         }
 
+        h1 {
+          float: right; 
+        }
+
         img {
           padding: .3em; 
           margin: 3%;
