fiddling with things (again)

--- a/css/index.css
+++ b/css/index.css
@@ -313,6 +313,7 @@ a {
         .disclosure-nav {
           max-width: 100%; 
           padding: 0; 
+          font-size: .5em;
         }
 
         h1 {
