--- a/css/index.css
+++ b/css/index.css
@@ -310,8 +310,13 @@ a {
                 "footer1"
         }
 
+        nav {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
         .disclosure-nav {
-          max-width: 100%; 
+          max-width: 90%; 
           padding: 0; 
           flex-direction: column; 
         }
@@ -325,5 +330,10 @@ a {
           margin: 3%;
           display: block;
           float: center;
+        }
+
+        .disclosure-nav button,
+        .disclosure-nav .main-link {
+            padding: 10px 10px 10px 18px;
         }
     }
